Edit css class "outofservice" to correct spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -98,10 +98,6 @@ h3 {
   color: #504B4B;
 }
 
-.outofservice, .busnumber-list {
-  width: 20%;
-}
-
 .destination {
   line-height: 1.5em;
   width: 60%;
@@ -117,7 +113,8 @@ h3 {
 }
 
 .outofservice {
-  line-height: 1.2em;
+  line-height: 1.4em;
+  width: 16%;
   text-align: right;
 }
 
